--- a/mytest/Makefile
+++ b/mytest/Makefile
@@ -1,8 +1,8 @@
-FILES =	Makefile test3.c legendre_rule.c
+FILES =	Makefile test4.c
 
-default: lib test3 legendre_rule
+default: lib test4
 
-all: lib test3 legendre_rule
+all: lib test4
 
 examples.zip: ${FILES}
 	@zip -9 -u -y $@ $^
@@ -13,7 +13,7 @@ clean:
 		*.Gx.* *.Gy.* *.Gz.* *.x.* *.y.* *.z.* *.b.* *.x0.*
 
 distclean: clean
-	-/bin/rm -f test1 matrix_test mesh*.* 
+	-/bin/rm -f test1 test4 matrix_test mesh*.* 
 		
 
 lib:
@@ -23,6 +23,7 @@ include ../../Makefile.inc
 
 #test1.o:		../../src/libphg${LIB_SUFFIX} test1.c
 #matrix_test.o:		../../src/libphg${LIB_SUFFIX} matrix_test.c
-test3.o:		../../src/libphg${LIB_SUFFIX} test3.c
-legendre_rule.o:        ../../src/libphg${LIB_SUFFIX} legendre_rule.c
+#test3.o:		../../src/libphg${LIB_SUFFIX} test3.c
+#legendre_rule.o:        ../../src/libphg${LIB_SUFFIX} legendre_rule.c
+test4.o:		../../src/libphg${LIB_SUFFIX} test4.c
 .PHONY: default all clean distclean lib
