simplified the transport.c and make some marks in other_functions.c

--- a/mytest/Makefile
+++ b/mytest/Makefile
@@ -1,8 +1,8 @@
-FILES =	Makefile test3.c
+FILES =	Makefile test5.c
 
-default: lib test3
+default: lib test5
 
-all: lib test3
+all: lib test5
 
 examples.zip: ${FILES}
 	@zip -9 -u -y $@ $^
@@ -10,11 +10,11 @@ examples.zip: ${FILES}
 clean:
 	-/bin/rm -f *.o *.tmp plot.eps PI[0-9]* \
 		*.G.* *.A.* *.Aalpha.* *.Abeta.* \
-		*.Gx.* *.Gy.* *.Gz.* *.x.* *.y.* *.z.* *.b.* *.x0.*
+		*.Gx.* *.Gy.* *.Gz.* *.x.* *.y.* *.z.* *.b.* *.x0.* \
+		test5
 
 distclean: clean
-	-/bin/rm -f test1 test3 test4 matrix_test mesh*.* 
-		
+	-/bin/rm -f test1 test3 test4 test5 matrix_test mesh*.* 
 
 lib:
 	@(cd ../../src; $(MAKE))
@@ -23,7 +23,8 @@ include ../../Makefile.inc
 
 #test1.o:		../../src/libphg${LIB_SUFFIX} test1.c
 #matrix_test.o:		../../src/libphg${LIB_SUFFIX} matrix_test.c
-test3.o:		../../src/libphg${LIB_SUFFIX} test3.c
+#test3.o:		../../src/libphg${LIB_SUFFIX} test3.c
 #legendre_rule.o:        ../../src/libphg${LIB_SUFFIX} legendre_rule.c
 #test4.o:		../../src/libphg${LIB_SUFFIX} test4.c
+test5.o:		../../src/libphg${LIB_SUFFIX} test5.c
 .PHONY: default all clean distclean lib
